<resources>
    <string name="app_name">ProyectoQR</string>


    <string name="login_title">Iniciar sesión</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="error_empty_fields">Completa todos los campos</string>
    <string name="error_login_failed">Error al iniciar sesión</string>
    <string name="error_network">No se pudo conectar al servidor</string>

    <string name="login_tagline">Bienvenido</string>
    <string name="login_description">Ingresa tus credenciales para continuar</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="create_account">Crear cuenta nueva</string>
    <string name="company_logo_desc">Logo de la empresa</string>
    <string name="client_logo_desc">Logo del cliente</string>


</resources>